[gd_scene load_steps=5 format=3 uid="uid://vt2pgrwdeiji"]

[ext_resource type="Script" uid="uid://c7i1c8lhhkhp1" path="res://scripts/interface/interfaceGestion.gd" id="1_bss64"]
[ext_resource type="Texture2D" uid="uid://c1p2hm7yoduhf" path="res://assets/interface/interfaceArrierePlan.tres" id="1_btko8"]

[sub_resource type="LabelSettings" id="LabelSettings_d73ns"]
font_size = 18
font_color = Color(0.984629, 0.563431, 3.85046e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1x52l"]
line_spacing = 15.0
font_size = 28
outline_size = 1
outline_color = Color(0.28485, 0.28485, 0.28485, 1)

[node name="interfaceUtilisateur" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bss64")

[node name="ApercuUnite" type="VSplitContainer" parent="."]
layout_mode = 0
anchor_left = 0.694444
anchor_right = 1.0
anchor_bottom = 0.308642
metadata/_edit_use_anchors_ = true

[node name="FondApercuUnite" type="TextureRect" parent="ApercuUnite"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_btko8")
metadata/_edit_use_anchors_ = true

[node name="LabelCouleurTour" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.891493
anchor_top = 0.462963
anchor_right = 1.0
anchor_bottom = 0.503087
grow_vertical = 2
text = "Tour Magenta"
label_settings = SubResource("LabelSettings_d73ns")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FondCouleurTour" type="TextureRect" parent="LabelCouleurTour"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_btko8")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="FondActionsRestantes" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.882813
anchor_top = 0.83642
anchor_right = 1.0
anchor_bottom = 0.884259
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_btko8")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="LabelActionsRestantes" type="Label" parent="FondActionsRestantes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.332031
anchor_top = 0.238636
anchor_right = 0.667969
anchor_bottom = 0.761364
grow_horizontal = 2
grow_vertical = 2
text = "Actions 3/3"
label_settings = SubResource("LabelSettings_d73ns")

[node name="bouttonFinTour" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.828125
anchor_top = 0.882716
anchor_right = 1.0
anchor_bottom = 0.942901
grow_horizontal = 0
mouse_filter = 0
texture = ExtResource("1_btko8")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ButtonFinTour" type="Button" parent="bouttonFinTour"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
action_mode = 0

[node name="LabelEndTurn" type="Label" parent="bouttonFinTour/ButtonFinTour"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -19.5
offset_right = 89.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "FIN DU TOUR"
label_settings = SubResource("LabelSettings_1x52l")
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="focus_entered" from="bouttonFinTour" to="." method="_on_boutton_fin_tour_focus_entered"]
[connection signal="pressed" from="bouttonFinTour/ButtonFinTour" to="." method="_on_button_fin_tour_pressed"]
